# Girlmath

./: Pasted-Website-Error-Response-Guideline-Project-Girly-Pop-Error-and-Search-Response-System-Goal-Auto-det-1745853497220.txt  Pasted-import-streamlit-as-st-import-requests-import-matplotlib-pyplot-as-plt-import-keepa-from-bs4-import--1745802158545.txt  README.md  app.py  database.py  girlmath.db  pyproject.toml  run_tests.py  test_functions.py  utils.py
